@@ -1,1 +1,1 @@
-ocaml -init "`ocamlfind query batteries`/top.ml" $@
+ocaml -init "/home/yoric/usr/local/godi/lib/ocaml/site-lib/batteries/top.ml" $@
