@@ -1,0 +1,1 @@
+ocaml -init "@DESTDIR@/batteries/top.ml" $@
